# xml-format

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.yaml  LICENSE.txt  README.md  pyproject.toml  ruff.toml
src/xml_format/: __about__.py  __main__.py
src/xml_format/cli/: __init__.py  main.py
tests/: __init__.py  test_xml_format.py
