[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xml-format"
dynamic = ["version"]
description = "A command-line tool to format XML files."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "Isaac Dadzie", email = "4581114+idadzie@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "lxml",
]

[project.urls]
Documentation = "https://github.com/idadzie/xml-format#readme"
Issues = "https://github.com/idadzie/xml-format/issues"
Source = "https://github.com/idadzie/xml-format"

[project.scripts]
xml-format = "xml_format.cli:xml_format"

[tool.hatch.version]
path = "src/xml_format/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/xml_format tests}"

[tool.coverage.run]
source_pkgs = ["xml_format", "tests"]
branch = true
parallel = true
omit = [
  "src/xml_format/__about__.py",
]

[tool.coverage.paths]
xml_format = ["src/xml_format", "*/xml-format/src/xml_format"]
tests = ["tests", "*/xml-format/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
